Reorganize molecule scenarios and update .gitignore

--- a/molecule/dao/playbook.yml
+++ b/molecule/dao/playbook.yml
@@ -82,13 +82,15 @@
   hosts: "*boot*"
   become: true
   vars:
+    bc_haya_image: "daocasino/blockchain:v0.2.1"
     bc_haya_comp_state_wallet: present
     bc_haya_comp_state_boot: present
     bc_haya_comp_state_bench: present
+    bc_haya_contracts: dao
     install_promstack: true
     bc_haya_node_id: 0
     bc_haya_plugin_randpa: present
-    bc_private_interface: eth1
+    bc_private_interface: enp0s8
     fluentd_sources_conf:
       - "type": forward
         "params":
@@ -102,19 +104,20 @@
             "host": "{{ groups['monitoring_peer'] | map('extract', hostvars, ['ansible_'+bc_private_interface, 'ipv4', 'address']) | list |join(',') }}"
             "port": "24224"
   roles:
-    - role: cloudalchemy.fluentd
     - role: tank.ansible-haya
 
 - name: Converge producer node
   hosts: "*producer*"
   become: true
   vars:
+    bc_haya_image: "daocasino/blockchain:v0.2.1"
     bc_haya_comp_state_prod: present
     bc_haya_comp_state_bench: present
+    bc_haya_contracts: dao
     install_promstack: true
     bc_haya_node_id: "{{ play_hosts.index(inventory_hostname) | int }}"
     bc_haya_plugin_randpa: present
-    bc_private_interface: eth1
+    bc_private_interface: enp0s8
   roles:
     - role: tank.ansible-haya
 
@@ -126,7 +129,7 @@
     install_promstack: true
     admin_user: tank
     admin_password: tank
-    bc_private_interface: eth1
+    bc_private_interface: enp0s8
     fluentd_sources_conf:
       - "type": forward
         "params":
@@ -144,4 +147,3 @@
             "timekey_wait": 10m
   roles:
     - role: tank.ansible-haya
-    - role: cloudalchemy.fluentd
