--- a/molecule/dao/molecule.yml
+++ b/molecule/dao/molecule.yml
@@ -20,8 +20,24 @@ platforms:
         type: dhcp
     cpus: 2
     memory: 1024
-    provider_raw_config_args:
-      - "customize ['modifyvm', :id, '--cpuexecutioncap', '50']"
+  - name: ubuntu1804-producer
+    box: ubuntu/bionic64
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: dhcp
+    cpus: 2
+    memory: 1024
+  - name: ubuntu1804-monitoring
+    box: ubuntu/bionic64
+    instance_raw_config_args:
+      - "vm.network 'forwarded_port', guest: 3000, host: 3000"
+      - "vm.network 'forwarded_port', guest: 9090, host: 9090"
+    interfaces:
+      - auto_config: true
+        network_name: private_network
+        type: dhcp
+    cpus: 1
 provisioner:
   name: ansible
   playbooks:
@@ -29,13 +45,21 @@ provisioner:
   config_options:
     defaults:
       callback_whitelist: profile_tasks
+      interpreter_python: auto
+      deprecation_warnings: False
     ssh_connection:
       pipelining: true
       ssh_args: -o ControlPersist=6000s -o ControlMaster=auto -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no
   lint:
     name: ansible-lint
+    options:
+      exclude:
+        - env
+        - .idea
+      x: ["301,305,306"]
+      force-color: True
 scenario:
-  name: default
+  name: dao
 verifier:
   name: testinfra
   lint:
