--- a/molecule/haya/prepare.yml
+++ b/molecule/haya/prepare.yml
@@ -6,7 +6,7 @@
     - name: Install pip3
       apt:
         name: python3-pip
-        update_cache: yes
+        update_cache: true
     - name: "Configuring ulimit"
       block:
         - pam_limits:
