--- a/tank/playbook.yml
+++ b/tank/playbook.yml
@@ -2,7 +2,7 @@
 - name: Collect facts
   hosts: all
   become: true
-  gather_facts: no
+  gather_facts: false
   tasks:
     - name: Gathering Facts
       setup:
