--- a/tasks/blockchain/haya/boot-contracts-absent.yml
+++ b/tasks/blockchain/haya/boot-contracts-absent.yml
@@ -67,6 +67,7 @@
     volumes:
       - "{{ bc_path_state }}:/root/.local"
       - "{{ bc_path_config }}:{{ bc_path_config }}"
+      - "{{ bc_path_contracts }}:{{ bc_path_contracts }}"
       - "/tmp/cores:/tmp/cores"
     capabilities:
       - IPC_LOCK
@@ -126,8 +127,8 @@
 
 - name: copy contracts
   copy:
-    src: configs/contracts/
-    dest: "{{ bc_path_config }}/contracts"
+    src: "contracts/{{ bc_haya_contracts }}/"
+    dest: "{{ bc_path_contracts }}"
 
 - name: set code system contracts
   loop: "{{ bc_haya_system_contracts }}"
@@ -137,7 +138,7 @@
     cmd: "{{ bc_haya_cli }}
     --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
     --url=http://localhost:{{ bc_haya_node_http_port }}
-    set code {{ item.name }} /host/$PWD/{{ item.wasm_path }}"
+    set code {{ item.name }} /host/{{ bc_path_contracts }}/{{ item.wasm_path }}"
   failed_when: "('already exists' not in set_code_system_contracts.stderr) and set_code_system_contracts.rc != 0"
   changed_when: "'Setting Code' in set_code_system_contracts.stdout"
 
@@ -157,7 +158,7 @@
     cmd: "{{ bc_haya_cli }}
     --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
     --url=http://localhost:{{ bc_haya_node_http_port }}
-    set abi {{ item.name }} /host/$PWD/{{ item.abi_path }}"
+    set abi {{ item.name }} /host/{{ bc_path_contracts }}/{{ item.abi_path }}"
   failed_when: "('already exists' not in set_abi_system_contracts.stderr) and set_abi_system_contracts.rc != 0"
   changed_when: "'Setting ABI' in set_abi_system_contracts.stdout"
 
