--- a/tasks/metrics/monitoring.yml
+++ b/tasks/metrics/monitoring.yml
@@ -10,7 +10,7 @@
     prometheus_targets: [{ jobname: "node_exporter", host: "localhost", port: "{{ node_exporter_port }}" }]
 
 - name: "Add prometheus targets to {{ inventory_hostname }}"
-  loop: "{{ bc_peers_ip }}"
+  loop: "{{ bc_all_ip }}"
   template:
     src: "configs/prometheus/target.yml.j2"
     dest: "/etc/prometheus/targets/{{ target_ip }}.yml"
@@ -48,7 +48,7 @@
 
 - name: Check dashboard exist by file
   stat:
-    path: "/root/dashboard.json"
+    path: "/tmp/dashboard.json"
   register: dashboard_exist
 
 - name: Generate UID
@@ -57,7 +57,7 @@
 
 - name: Get dashboard uid
   shell: |
-    cat /root/dashboard.json | grep uid | sed -e s/uid//g | tr -d ', ":'
+    cat /tmp/dashboard.json | grep uid | sed -e s/uid//g | tr -d ', ":'
   register: uid_from_file
 
 - name: Check dashboard exist by slug
@@ -71,31 +71,33 @@
   register: slughttpresponse
 
 - name: Copy dashboard
+  become: false
   template:
     src: "grafana/haya/dashboard.json.j2"
-    dest: "/root/dashboard.json"
+    dest: "/tmp/dashboard.json"
   register: dashboard
   when: slughttpresponse.status == 404
 
 - name: Import Grafana dashboard (if not imported)
   block:
     - name: "Create dashboard"
+      become: false
       grafana_dashboard:
         grafana_url: "http://localhost:3000"
         grafana_user: "{{ admin_user }}"
         grafana_password: "{{ admin_password }}"
         state: present
-        message: "Imported"
+        commit_message: Imported
         overwrite: true
-        path: "/root/dashboard.json"
+        path: "/tmp/dashboard.json"
 
     - name: "Set imported to true"
       set_fact:
         imported: true
   when:
-    - slughttpresponse.status == 404
-    - not dashboard_exist.stat.exists
+    - slughttpresponse.status != 412
     - not imported
+    - not dashboard_exist.stat.exists
 
 - name: "Reimport Grafana dashboard (if dashboard file changed)"
   block:
