--- a/tasks/blockchain/haya/boot-contracts-absent.yml
+++ b/tasks/blockchain/haya/boot-contracts-absent.yml
@@ -37,11 +37,6 @@
     src: configs/nodeos/logger.json.j2
     dest: "{{ bc_path_config }}/logger.json"
 
-- name: set accounts.json
-  template:
-    src: configs/nodeos/accounts.json.j2
-    dest: "{{ bc_path_config }}/accounts.json"
-
 - debug:
     var: "{{ item }}"
   with_items:
@@ -73,6 +68,11 @@
       - IPC_LOCK
     stop_timeout: 600
     pull: true
+    log_driver: "{{ bc_docker_log_driver | default(omit) }}"
+    log_options:
+      max-size: "{{ '1g' if bc_docker_log_driver == 'json-file' else omit }}"
+      fluentd-async-connect: "{{ 'true' if bc_docker_log_driver == 'fluentd' else omit }}"
+      fluentd-address: "{{ 'localhost:24224' if bc_docker_log_driver == 'fluentd' else omit  }}"
 
 - name: "Waiting"
   pause:
@@ -88,13 +88,16 @@
     - never
     - debug
 
-- name: import producer key into wallet
-  shell:
-    cmd: "{{ bc_haya_cli }} --wallet-url=http://localhost:{{ bc_haya_wallet.port }} wallet import --private-key {{ bc_haya_boot.pvt_key }}"
+- name: import bootstrap producer key into wallet
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    wallet import --private-key {{ bc_haya_boot.pvt_key }} && \
+    touch {{ bc_path_state }}/importbootkey
+  args:
+    creates: "{{ bc_path_state }}/importbootkey"
   register: import_producer_key
   ignore_errors: true
-  failed_when: "('Nonexistent wallet' in import_producer_key.stderr or 'Key already exists' not in import_producer_key.stderr) and import_producer_key.rc != 0"
-  changed_when: "'imported private key for' in import_producer_key.stdout"
 
 - debug:
     msg: "{{ import_producer_key.stderr_lines }}"
@@ -106,14 +109,32 @@
     - never
     - debug
 
+- name: import all producer key into wallet
+  loop: "{{ bc_haya_producer_accounts }}"
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    wallet import --private-key {{ item.pvt_key }} && \
+    touch {{ bc_path_state }}/importprodkeys-{{ item.name }}
+  args:
+    creates: "{{ bc_path_state }}/importprodkeys-{{ item.name }}"
+  register: import_all_producer_key
+  ignore_errors: true
+  when: bc_peers_ip|length > index + 1
+  loop_control:
+    index_var: index
+
 - name: create system accounts
   loop: "{{ bc_haya_system_accounts }}"
   register: create_system_accounts
-  shell:
-    cmd: "{{ bc_haya_cli }}
-    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    --url=http://localhost:{{ bc_haya_node_http_port }} create account -x 45 eosio {{ item }} {{ bc_haya_boot.pub_key }} {{ bc_haya_boot.pub_key }}"
-  failed_when: "('Account name already exists' not in create_system_accounts.stderr) and create_system_accounts.rc != 0"
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    create account -x 45 eosio {{ item }} {{ bc_haya_boot.pub_key }} {{ bc_haya_boot.pub_key }} && \
+    touch {{ bc_path_state }}/createsysacc-{{ item }}
+  args:
+    creates: "{{ bc_path_state }}/createsysacc-{{ item }}"
   changed_when: "'executed transaction' in create_system_accounts.stdout"
 
 
@@ -130,37 +151,18 @@
     src: "contracts/{{ bc_haya_contracts }}/"
     dest: "{{ bc_path_contracts }}"
 
-- name: set code system contracts
-  loop: "{{ bc_haya_system_contracts }}"
-  register: set_code_system_contracts
-  shell:
-    chdir: "{{ bc_path_config }}/contracts"
-    cmd: "{{ bc_haya_cli }}
-    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    --url=http://localhost:{{ bc_haya_node_http_port }}
-    set code {{ item.name }} /host/{{ bc_path_contracts }}/{{ item.wasm_path }}"
-  failed_when: "('already exists' not in set_code_system_contracts.stderr) and set_code_system_contracts.rc != 0"
-  changed_when: "'Setting Code' in set_code_system_contracts.stdout"
-
-- name: Show stderr from set code system contracts task
-  debug:
-    msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
-  loop: "{{ set_code_system_contracts.results }}"
-  tags:
-    - never
-    - debug
-
 - name: set abi system contracts
   loop: "{{ bc_haya_system_contracts }}"
   register: set_abi_system_contracts
-  shell:
-    chdir: "{{ bc_path_config }}/contracts"
-    cmd: "{{ bc_haya_cli }}
-    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    --url=http://localhost:{{ bc_haya_node_http_port }}
-    set abi {{ item.name }} /host/{{ bc_path_contracts }}/{{ item.abi_path }}"
-  failed_when: "('already exists' not in set_abi_system_contracts.stderr) and set_abi_system_contracts.rc != 0"
-  changed_when: "'Setting ABI' in set_abi_system_contracts.stdout"
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    set abi {{ item.name }} /host/{{ bc_path_contracts }}/{{ item.abi_path }} && \
+    touch {{ bc_path_state }}/setabisyscontracts-{{ item.name }}
+  args:
+    chdir: "{{ bc_path_contracts }}"
+    creates: "{{ bc_path_state }}/setabisyscontracts-{{ item.name }}"
 
 - name: Show stderr from set abi system contracts task
   debug:
@@ -170,16 +172,38 @@
     - never
     - debug
 
+- name: set code system contracts
+  loop: "{{ bc_haya_system_contracts }}"
+  register: set_code_system_contracts
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    set code {{ item.name }} /host/{{ bc_path_contracts }}/{{ item.wasm_path }} && \
+    touch {{ bc_path_state }}/setcodesyscontracts-{{ item.name }}
+  args:
+    chdir: "{{ bc_path_contracts }}"
+    creates: "{{ bc_path_state }}/setcodesyscontracts-{{ item.name }}"
+
+- name: Show stderr from set code system contracts task
+  debug:
+    msg: "DEBUG: \n stderr:{{ item.stderr }}\n stdout:{{ item.stdout }}"
+  loop: "{{ set_code_system_contracts.results }}"
+  tags:
+    - never
+    - debug
+
 - name: create token
   register: create_token
-  shell:
-    cmd: "{{ bc_haya_cli }}
-    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    --url=http://localhost:{{ bc_haya_node_http_port }}
-    push action eosio.token create '[\"eosio\", \"{{ bc_haya_tokens_amount }}
-    EOS\"]' -p eosio.token"
-  failed_when: "('already exists' not in create_token.stderr) and create_token.rc != 0"
-  changed_when: "'executed transaction' in create_token.stdout"
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    push action eosio.token create '["eosio", "{{ bc_haya_tokens_amount }} \
+    EOS"]' -p eosio.token && \
+    touch {{ bc_path_state }}/createtoken
+  args:
+    creates: "{{ bc_path_state }}/createtoken"
 
 - name: Show stderr from create token task
   debug:
@@ -190,14 +214,14 @@
 
 - name: allocate tokens
   register: allocate_tokens
-  shell:
-    cmd: "{{ bc_haya_cli }}
-    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    --url=http://localhost:{{ bc_haya_node_http_port }}
-    push action eosio.token issue '[\"eosio\", \"{{ bc_haya_tokens_amount }}
-    EOS\", \"memo\"]' -p eosio"
-  failed_when: "('quantity exceeds available supply' not in allocate_tokens.stderr) and allocate_tokens.rc != 0"
-  changed_when: "'executed transaction' in allocate_tokens.stdout"
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    push action eosio.token issue '["eosio", "{{ bc_haya_tokens_amount }} EOS", "memo"]' -p eosio && \
+    touch {{ bc_path_state }}/allocatetokens
+  args:
+    creates: "{{ bc_path_state }}/allocatetokens"
 
 - name: Show stderr from allocate tokens task
   debug:
@@ -209,14 +233,14 @@
 - name: create producers account
   loop: "{{ bc_haya_producer_accounts }}"
   register: create_producers_account
-  shell:
-    cmd: "{{ bc_haya_cli }}
-    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    --url=http://localhost:{{ bc_haya_node_http_port }}
-    create account -x 45 eosio {{ item.name }} {{ item.pub_key }}
-    {{ item.pub_key }}"
-  failed_when: "('Account name already exists' not in create_producers_account.stderr) and create_producers_account.rc != 0"
-  changed_when: "'executed transaction' in create_producers_account.stdout"
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    create account -x 45 eosio {{ item.name }} {{ item.pub_key }} {{ item.pub_key }} && \
+    touch {{ bc_path_state }}/createprodacc-{{ item.name }}
+  args:
+    creates: "{{ bc_path_state }}/createprodacc-{{ item.name }}"
   retries: 5
   delay: 3
   until: create_producers_account is success
@@ -245,13 +269,14 @@
 
 - name: set producers
   register: set_producers
-  shell:
-    cmd: "{{ bc_haya_cli }}
-    --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    --url=http://localhost:{{ bc_haya_node_http_port }}
-    push action eosio setprods '[{{ my_prods | to_json }}]' -p eosio"
-  failed_when: "('Account name already exists' not in set_producers.stderr) and set_producers.rc != 0"
-  changed_when: "'executed transaction' in set_producers.stdout"
+  shell: |
+    {{ bc_haya_cli }} \
+    --wallet-url=http://localhost:{{ bc_haya_wallet.port }} \
+    --url=http://localhost:{{ bc_haya_node_http_port }} \
+    push action eosio setprods '[{{ my_prods | to_json }}]' -p eosio && \
+    touch {{ bc_path_state }}/setproducers
+  args:
+    creates: "{{ bc_path_state }}/setproducers"
 
 - name: Show stderr from create system accounts task
   debug:
