--- a/tasks/blockchain/haya/wallet.yml
+++ b/tasks/blockchain/haya/wallet.yml
@@ -41,7 +41,7 @@
   shell:
     cmd: "{{ bc_haya_cli }}
     --wallet-url=http://localhost:{{ bc_haya_wallet.port }}
-    wallet create --to-console"
+    wallet create -f {{ bc_path_general }}/{{ bc_name }}/haya-cli/wallet.password"
   register: create_wallet
   failed_when: "'Wallet already exists' not in create_wallet.stderr and create_wallet.rc != 0"
   changed_when: "'Creating wallet' in create_wallet.stdout"
