--- a/defaults/main/haya.yml
+++ b/defaults/main/haya.yml
@@ -7,8 +7,8 @@ bc_haya_comp_state_prod: absent
 bc_haya_comp_state_monitoring: absent
 bc_haya_comp_state_bench: absent
 bc_haya_plugin_randpa: "present"
-bc_haya_plugin_net_api: false
-bc_haya_plugin_producer_api: false
+bc_haya_plugin_net_api: true
+bc_haya_plugin_producer_api: true
 
 bc_haya_image: "mixbytes/haya"
 bc_path_contracts: "{{ bc_path_general }}/{{ bc_name }}/contracts"
